--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wvu-patterns-masthead-links",
-  "version": "0.0.10",
+  "version": "0.1.0",
   "description": "WVU Pattern Library - Masthead Links Module",
   "main": "gulpfile.js",
   "scripts": {
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/wvu-patterns/wvu-patterns-masthead-links",
   "devDependencies": {
+    "browser-sync": "^1.7.3",
     "del": "^0.1.3",
     "gulp": "^3.8.8",
     "gulp-autoprefixer": "^1.0.1",
