--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "wvu-patterns-masthead-links",
+  "homepage": "https://github.com/wvu-patterns/wvu-patterns-masthead-links",
   "version": "0.1.0",
-  "description": "WVU Pattern Library - Masthead Links Module",
-  "main": "gulpfile.js",
-  "scripts": {
-    "test": "gulp ci"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/wvu-patterns/wvu-patterns-masthead-links.git"
   },
-  "keywords": [
-    "wvu"
-  ],
-  "author": "Steven Spriggs <steven.spriggs@gmail.com>",
-  "license": "MIT",
   "bugs": {
     "url": "https://github.com/wvu-patterns/wvu-patterns-masthead-links/issues"
   },
-  "homepage": "https://github.com/wvu-patterns/wvu-patterns-masthead-links",
+  "author": "Steven Spriggs <steven.spriggs@mail.wvu.edu>",
+  "keywords": [
+    "wvu",
+    "west virginia university",
+    "patterns"
+  ],
+  "description": "WVU Pattern Library - Masthead Links Module",
+  "license": "MIT",
+  "main": "gulpfile.js",
+  "scripts": {
+    "test": "gulp ci"
+  },
   "devDependencies": {
     "browser-sync": "^1.7.3",
     "del": "^0.1.3",
